# fiuba-reviews

./: .dockerignore  .editorconfig  .env  .env.development  .envrc  .gitignore  .prettierignore  .prettierrc  .vercelignore  Dockerfile  README.md  compose.yaml  flake.nix  fly.toml  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vite.config.ts.timestamp-1705880337626-9e98c63900684.mjs
actualizador/: .env  flake.nix
actualizador-catedras/: .env.example  .gitignore  Makefile  actualizacion_codigos.go  actualizacion_comisiones.go  compose.yaml  conn.go  db.go  docentes.go  go.mod  go.sum  log.go  logger.go  main.go  materia.go  materia_test.go  materias.go  materias_test.go  oferta_comisiones.go  patch.go  planes.go  planes_test.go  s3.go  tui.go
actualizador-ofertas/: .env.example  Makefile  main.go
actualizador-ofertas/actualizador/: actualizador.go  catedra.go  docente.go  materia.go  materia_test.go  oferta.go  patch.go
actualizador-ofertas/config/: bucket.go  config.go  database.go  logger.go
actualizador-ofertas/tui/: docentesnuevos.go  docentesregistrados.go  materia.go  tui.go
actualizador-siu/: .env
actualizador-siu/cliente/: .prettierrc  package.json
actualizador-siu/servidor/: .gitignore  Makefile  README.md  go.mod  go.sum  ofertas.go  resolucion.go  sincronizacion.go
actualizador/cliente/: .env  .gitignore  .prettierignore  .prettierrc  package.json  svelte.config.js  vite.config.ts
actualizador/cliente/src/: app.html
actualizador/servidor/: .gitignore  .golangci.yaml  AGENTS.md  Makefile  TEMP.sql  main.go  oferta.go  ofertas.go  patch.go  patches.go  prepare.sql  resolucion.go  router.go  selector.go  servidor.go  sincronizacion.go  subsanacion.go  sync.go  tipos.go  types.go
adaptador/: Cargo.toml  init.sql
adaptador/src/: entidad.rs  lib.rs  main.rs  remoto.rs
adaptador/src/entidad/: sql.rs  tablas.rs
adaptador/src/remoto/: deserializar.rs
adaptador_datos/: Cargo.toml  Dockerfile
adaptador_datos/src/: catedra.rs  comentario.rs  lib.rs  main.rs  materia.rs
api/: Makefile  go.mod  go.sum  index.go  main.go  scraper-siu.go  scraper.go
api/scraper-siu/: index.go
api/scraper_siu/: scraper_siu_test.go
app/: .env  .env.development  .gitignore  .prettierrc  drizzle.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tailwind.config.ts  vercel.json
app/prisma/: schema.prisma
app/src/: app.css  app.html
apps/actualizador/: .golangci.yaml  .mcp.json  Makefile  README.md  TODO.sql  compose.yaml  go.mod  go.sum  main.go
apps/resumidor/: .gitignore
apps/web/: .env.development  pnpm-lock.yaml
backend/: .vercelignore  Cargo.toml  Dockerfile  Makefile  vercel.json
backend/api/: go.mod
backend/api/scraper-siu/: index.go
backend/cmd/server/: main.go
backend/http/: 1_materias.http  2_materia_by_codigo.http  3_catedras_by_materia.http  4_docentes_by_catedra.http  5_docente_by_codigo.http  6_comentarios_by_docente.http  root.http
backend/pkg/scraper_siu/: scraper_siu.go  scraper_siu_test.go
backend/scraper-siu/: Makefile  go.mod  main.go  scraper_siu.go  scraper_siu_test.go
backend/scraper_siu/: go.mod
backend/scraper_siu/testdata/: ingenieria-quimica-2C-2024.txt
backend/src/: catedra.rs  catedras.rs  comentario.rs  comentarios.rs  docentes.rs  lib.rs  main.rs  materia.rs  materias.rs
backend/src/database/: materias.rs  mod.rs  prelude.rs
crates/adaptador-datos/: Cargo.toml  Development.Dockefile  Dockerfile
crates/adaptador-datos/sql/: schema.sql  tablas.sql  test.sql
crates/adaptador-datos/src/: catedra.rs  catedras.rs  comentario.rs  comentarios.rs  docente.rs  docentes.rs  lib.rs  main.rs  materia.rs  materias.rs  sql.rs
crates/generador-descripciones/: Cargo.toml  Dockerfile  init.sql
crates/generador-descripciones/src/: hugging_face.rs  inference_api.rs  lib.rs  main.rs
crates/ia/: .gitignore  Cargo.toml
crates/resumidor-comentarios/: .gitignore  Cargo.toml  README.md
crates/resumidor-comentarios/src/: gpt.rs  lib.rs  main.rs
crates/resumidor-comentarios/src/gpt/: hugging_face.rs  open_ai.rs  open_ia.rs
database/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  compose.yaml
database/src/: catedra.rs  catedras.rs  comentarios.rs  dolly.rs  lib.rs  main.rs  materia.rs  materias.rs  sql.rs
database/src/dolly/: sql.rs
frontend/: .env  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  package.json  pnpm-lock.yaml  prettier.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
frontend/prisma/: schema.prisma
frontend/src/: app.css  app.html
generador-resumenes/: Cargo.toml
generador-resumenes/src/: main.rs
migracion-datos/: .dockerignore  Cargo.toml  compose.yaml
migracion-datos/src/: catedras.rs  comentarios.rs  lib.rs  main.rs  materias.rs
prisma/: schema.prisma
resumidor/: .gitignore  Cargo.toml
resumidor-comentarios/src/: llm.rs  sql.rs
resumidor/src/: main.rs
scraper/: go.mod  scraper.go  scraper_test.go
scraper-siu/: .air.toml  Makefile  scraper_siu_test.go
scraper_siu/: go.mod  scraper_siu.go  scraper_siu_test.go
scraper_siu/testdata/: ingenieria-en-informatica-2C-2024.txt
servidor/: Cargo.toml
servidor/src/: lib.rs  main.rs
servidor/src/db/: catedras.rs  comentarios.rs  docentes.rs  materias.rs  mod.rs  prelude.rs
sitio-web/: .env.development  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  drizzle.config.ts  package.json  pnpm-lock.yaml  skills-lock.json  svelte.config.js  vite.config.ts
sitio-web/src/: app.d.ts
src/: app.css  app.d.ts  app.html  app.postcss
src/lib/: staticData.ts  utils.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
web/: .env  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  drizzle.config.ts  opencode.json  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json  vite.config.ts
web/src/: app.html
web/static/: robots.txt  sitemap.xml
(+562 files in other folders)
