[package]
name = "adaptador"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
http-cache-reqwest = "0.6.0"
reqwest = { version = "0.11.14", features = ["json"] }
reqwest-middleware = "0.2.0"
reqwest-tracing = "0.4.0"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }
