[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = "0.6.18"
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
