[package]
name = "datagen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
http-cache = "0.11.0"
http-cache-reqwest = "0.9.0"
reqwest = "0.11.16"
reqwest-middleware = "0.2.1"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
