[package]
name = "resumidor"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
const_format = "0.2.32"
dotenvy = "0.15.7"
format_serde_error = "0.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.39.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
