[package]
name = "generador-descripciones"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
const_format = "0.2.31"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "uuid", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
